# HyprlandMonitor

./: CMakeLists.txt  README.md
